<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".auth.fragments.LoginFragment">

    <TextView
        android:id="@+id/tvLoginHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/login_fragment_heading"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/dm_sans_regular"
        android:text="@string/login_fragment_sub_heading"
        android:textColor="@color/subheading_color"
        app:layout_constraintLeft_toLeftOf="@+id/tvLoginHeading"
        app:layout_constraintRight_toRightOf="@+id/tvLoginHeading"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginHeading" />

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginSubHeading">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_email"
            app:boxStrokeColor="@color/box_stroke_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/text_color"
            app:placeholderText="Brandonelouis@gmail.com"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_medium"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_password"
            app:boxStrokeColor="@color/box_stroke_color"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintTextColor="@color/text_color"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_medium"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/field_forgot_password"
            android:fontFamily="@font/dm_sans_regular"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginVertical="@dimen/medium_margin"
            android:backgroundTint="@color/button_color"
            android:fontFamily="@font/dm_sans_medium"
            android:padding="@dimen/button_padding"
            android:text="@string/field_login"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            app:cornerRadius="6dp" />

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up_prompt"
            android:textColor="@color/text_color"
            android:textSize="14sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>