<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".auth.fragments.SignupFragment">

    <TextView
        android:id="@+id/tvSignupHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/signup_fragment_heading"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignupSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/dm_sans_regular"
        android:text="@string/signup_fragment_sub_heading"
        android:textColor="@color/subheading_color"
        app:layout_constraintLeft_toLeftOf="@+id/tvSignupHeading"
        app:layout_constraintRight_toRightOf="@+id/tvSignupHeading"
        app:layout_constraintTop_toBottomOf="@+id/tvSignupHeading" />

    <LinearLayout
        android:id="@+id/SignupContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignupSubHeading">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUsernameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_username"
            app:boxStrokeColor="@color/box_stroke_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/text_color"
            app:placeholderText="eg. Brandone Louis"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_medium"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_email"
            app:boxStrokeColor="@color/box_stroke_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/text_color"
            app:placeholderText="Brandonelouis@gmail.com"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_medium"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_password"
            app:boxStrokeColor="@color/box_stroke_color"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintTextColor="@color/text_color"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_medium"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginVertical="@dimen/medium_margin"
            android:backgroundTint="@color/button_color"
            android:fontFamily="@font/dm_sans_medium"
            android:padding="@dimen/button_padding"
            android:text="@string/field_signup"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            app:cornerRadius="6dp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_prompt"
            android:textColor="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>