<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/large_padding"
    tools:background="@color/bottom_sheet_background_color">

    <View
        android:layout_width="30dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/rounder_view_corner" />

    <TextView
        android:id="@+id/tvMockTestName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/large_margin"
        android:fontFamily="@font/dm_sans_bold"
        android:textColor="@color/bottom_sheet_text_color"
        android:textSize="20sp"
        tools:text="Tata Consultancy" />


    <LinearLayout
        android:id="@+id/tvMockTestConstraints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMockTestQuestionCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="@font/dm_sans_bold"
                android:textColor="@color/orange"
                android:textSize="18sp"
                tools:text="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/field_question"
                android:textColor="@color/bottom_sheet_sub_text"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMockTestDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="@font/dm_sans_bold"
                android:textColor="@color/orange"
                android:textSize="18sp"
                tools:text="60m" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/field_duration"
                android:textColor="@color/bottom_sheet_sub_text"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:fillViewport="true"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/field_instruction"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/dm_sans_regular"
                android:paddingHorizontal="@dimen/medium_padding"
                android:text="@string/mock_test_instructions"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/field_navigation"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/dm_sans_regular"
                android:paddingHorizontal="@dimen/small_padding"
                android:text="@string/mock_test_navigation"
                android:textColor="@color/bottom_sheet_text_color"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStartTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:backgroundTint="@color/bottom_sheet_view_color"
                android:fontFamily="@font/dm_sans_medium"
                android:padding="@dimen/button_padding"
                android:text="@string/field_start_test"
                android:textColor="@color/bottom_sheet_button_text_color"
                android:textSize="16sp"
                app:cornerRadius="6dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>