<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".auth.fragments.ForgotPassFragment">

    <TextView
        android:id="@+id/tvForgetPassHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/field_forgot_password"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForgetPassSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/dm_sans_regular"
        android:padding="@dimen/small_padding"
        android:text="@string/forget_pass_fragment_sub_heading"
        android:textAlignment="center"
        android:textColor="@color/subheading_color"
        app:layout_constraintLeft_toLeftOf="@+id/tvForgetPassHeading"
        app:layout_constraintRight_toRightOf="@+id/tvForgetPassHeading"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPassHeading" />

    <LinearLayout
        android:id="@+id/ForgetPassContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_large_margin"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPassSubHeading">

        <ImageView
            android:id="@+id/ivForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:padding="@dimen/medium_padding"
            android:src="@drawable/ic_forget_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/medium_margin"
            android:hint="@string/field_email"
            app:boxStrokeColor="@color/box_stroke_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/text_color"
            app:placeholderText="Brandonelouis@gmail.com"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_medium"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:backgroundTint="@color/button_color"
            android:fontFamily="@font/dm_sans_medium"
            android:padding="@dimen/button_padding"
            android:text="@string/field_reset_password"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            app:cornerRadius="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginVertical="@dimen/extra_small_margin"
            android:backgroundTint="@color/button_tint_color"
            android:fontFamily="@font/dm_sans_medium"
            android:padding="@dimen/button_padding"
            android:text="@string/field_back_to_login"
            android:textColor="@color/button_tint_text_color"
            android:textSize="16sp"
            app:cornerRadius="6dp"
            app:strokeColor="@color/button_tint_border_color"
            app:strokeWidth="2dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>